# whetstone

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  action.yml  install.sh  k4ifvi2gjuknljfmbif1edrbeskn5idk.darc  manifest  ouddctvlsid2pgu5arekspjafltv3pnk  pyproject.toml  tnoe9i2bunqqmalgjgocpbflnsola50f.darc
.beads/: .gitignore  README.md  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml  whetstone-example.yml
assets/: whetstone.yaml.template
packaging/homebrew/: README.md  whetstone.rb
planning/: command-taxonomy.md  cutover-criteria.md  cutover.md  debt.md  detect-patterns-analysis.md  detect-patterns-packaging.md  dogfood-debt.md  dogfood-nq8-log.md  interaction-modes.md  mvp.md  one-pager.md  product-spec.md  python-compatibility.md  roadmap.md  rust-migration.md  shared-config-packs.md  whetstone-logic-flow.mmd  whetstone-overview.md  whetstone-roadmap-v2.md
planning/archive/: current-state-2026-04-05.md  detect-patterns-analysis.md  layer-system.md  mvp-v2.md  one-pager.md  performance-baselines.md
planning/measurements/: adherence-score-design.md  epic-3e-baseline.md
planning/whetstone-v2/: one-pager.md  plan.md
references/: extraction-prompt.md  handoff-schema.md  proposal-schema.md  rule-schema.yaml  rust-python-differences.md  signal-strategies.md  troubleshooting.md  workflow-matrix.md
scripts/: beads-repair.sh  ci-check.py  cli.py  detect-deps.py  detect-patterns.py  doctor.py  generate-agent-context.py  generate-tests.py  measure-epic-3e.sh  resolve-sources.py  state.py  status.py  validate-rule-schema.py
scripts/legacy/: ci-check.py  state.py  (+4 more)
src/: adherence.rs  approve.rs  bench.rs  check.rs  ci_check.rs  cli.rs  config.rs  detect_patterns.rs  doctor.rs  eval.rs  extract.rs  gen.rs  generate_context.rs  generate_lint.rs  generate_tests.rs  handoff.rs  layers.rs  lib.rs  main.rs  output.rs  personal.rs  proposals.rs  report.rs  review.rs  rule_authoring.rs  rules.rs  rules_query.rs  source_mgmt.rs  status.rs  team.rs  templates.rs  triggers.rs  types.rs  update.rs  worklist.rs
tests/: rust_integration.rs  test_incremental.py  test_script_contracts.py  test_state.py
whetstone/: .metrics.jsonl  whetstone.yaml
(+113 files in other folders)
