[package]
name = "whetstone"
version = "0.1.1"
edition = "2021"
description = "Whetstone sharpens the tools that write your code"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "whetstone"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
walkdir = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
